--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,15 @@
         "async": "^3.2.1",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
-        "body-parser": "^1.19.0",
+        "body-parser": "^1.19.2",
         "core-js": "^3.6.5",
         "cors": "^2.8.5",
-        "express": "^4.17.1",
+        "express": "^4.17.3",
         "express-fileupload": "^1.2.1",
         "fileupload": "^0.2.1",
         "http": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
+        "mime": "^3.0.0",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
@@ -33,7 +34,8 @@
         "npm-check-updates": "^12.0.2",
         "path": "^0.12.7",
         "req": "^0.1.4",
-        "sequelize": "^6.6.5",
+        "sequelize": "^6.17.0",
+        "sequelize-cli": "^6.4.1",
         "urlencode": "^1.1.0",
         "util": "^0.12.4"
     }
