--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
-        "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+        "sass": "sass --watch ./frontend/sass/main.scss:./public/css/style.css"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.0",
